@@ -50,20 +50,8 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-                <compilerArgs>
-                    --enable-preview
-                </compilerArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>3.11.2</version>
-        <configuration>
-            <additionalOptions>--enable-preview</additionalOptions>
-        </configuration>
       </plugin>
     </plugins>
   </build>
